# langchain-skillkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.start/ideas/: 2026-02-27-node-class-api-redesign.md
examples/: custom_state_type.py  manual_wiring.py  multi_agent.py  root_with_checkpointer.py  standalone_node.py  subgraph_with_checkpointer.py
src/langchain_agent_skills/: __init__.py  create_agent.py  registry.py  skill_catalog.py  skill_toolkit.py  state.py  types.py  validate.py
src/langchain_skillkit/: __init__.py  frontmatter.py  node.py  skill_kit.py  state.py  types.py  validate.py
tests/: test_create_agent.py  test_frontmatter.py  test_node.py  test_registry.py  test_skill_kit.py  test_skill_toolkit.py  test_types.py  test_validate.py
tests/fixtures/prompts/nodes/: analyst.md  researcher.md
tests/fixtures/skills/market-sizing/: calculator.py
tests/fixtures/skills/market_sizing/: SKILL.md
tests/fixtures/skills_extra/competitive_analysis/: SKILL.md
