[project]
name = "langchain-skillkit"
version = "0.2.0"
description = "Skill-driven agent toolkit for LangGraph with semantic skill discovery"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "langchain-core>=0.3",
    "langgraph>=0.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "langchain-openai>=0.3",
    "mypy>=1.10",
    "ruff>=0.8",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_skillkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C90", "N", "UP", "PIE", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["langchain_skillkit"]
mypy_path = "src"
